--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 dependencies {
     implementation 'com.google.guava:guava:27.0.1-jre'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.4.0'
+    testImplementation 'org.mockito:mockito-core:2.24.5'
     compile 'com.amazonaws:aws-lambda-java-core:1.1.0'
 }
 
