--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.4.0'
     testImplementation 'org.mockito:mockito-core:2.24.5'
     compile 'com.amazonaws:aws-lambda-java-core:1.1.0'
+    compile 'com.amazonaws:aws-lambda-java-log4j2:1.0.0'
+    compile 'org.apache.logging.log4j:log4j-core:2.8.2'
+    compile 'org.apache.logging.log4j:log4j-api:2.8.2'
 }
 
 mainClassName = 'nmck.emotive_stocks.Lambda'
