--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile 'com.amazonaws:aws-lambda-java-log4j2:1.0.0'
     compile 'org.apache.logging.log4j:log4j-core:2.8.2'
     compile 'org.apache.logging.log4j:log4j-api:2.8.2'
+    compile 'com.google.code.gson:gson:2.8.5'
 }
 
 mainClassName = 'nmck.emotive_stocks.Lambda'
