--- a/build.gradle
+++ b/build.gradle
@@ -18,4 +18,14 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.5'
 }
 
+task buildZip(type: Zip) {
+    from compileJava
+    from processResources
+    into('lib') {
+        from configurations.compileClasspath
+    }
+}
+
+build.dependsOn buildZip
+
 mainClassName = 'nmck.emotive_stocks.Lambda'
